# FoodiumPythonBackend

./: .gitignore  Docker-compose.yml  Dockerfile  flaskApi.py  hello.py  main.py  pyproject.toml  tester.py
ML_and_Data_Science/: food_recommendation.py  glovo_pricing.py  nutrient_values.py
