[project]
name = "foodiumpythonbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.115.6",
    "gensim>=4.3.3",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas==2.1.4",
    "scikit-learn>=1.6.0",
    "scipy>=1.13.1",
    "spacy==3.7.5",
    "textblob>=0.18.0.post0",
]
